Fixed QuickLook modulepath + printing errors in the end
- I could not find out what happened, it was not visible in logs, just in
  the test xml output.

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>